--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -22,9 +22,11 @@ services:
     image: nginx:1.25.2-alpine
     container_name: logs_nginx
     ports:
-      - "${NGINX_PORT}:3200"
+      - "443:443"
+      - "80:80"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./certs:/etc/ssl/certs:ro
+      - ./nginx/prod.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - logs_flask
     networks:
